Adding a overlay to win a trophy

--- a/GamejoltAPI/plugin.cfg
+++ b/GamejoltAPI/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="GameJoltAPI"
-description="Implementacao de uma api da gamejolt"
-author="lusantisuper"
-version="0.1"
+description="Complete implementation of Gamejolt API"
+author="Solid Titans"
+version="1.0"
 script="main.gd"
